Tue Sep 19 04:32:04 BST 2006  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Revert change to Xapian::Weight's copy
	  constructor because it prevents Omega from compiling.

Tue Sep 19 04:01:14 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Make the argument of log() a double to avoid
	  potential compiler warnings.

Mon Sep 18 22:58:19 BST 2006  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Xapian::Weight's copy constructor should
	  be private not protected (direct copying isn't allowed).

Mon Sep 18 07:03:51 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: We reportedly need "-lm" to get maths functions on
	  some versions of Sun's C++ compiler.

Sat Sep 16 12:08:25 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Sun's C++ compiler implements non-standards-conforming
	  lifetimes for temporary objects (for "backwards compatibility" with
	  old Sun C++ specific code).  We don't care about such code, so
	  always pass "-features=tmplife" for Sun C++.

Sat Sep 16 03:04:57 BST 2006  Olly Betts <olly@survex.com>

	* bin/xapian-progsrv.cc: Oops, fix compilation error.

Sat Sep 16 02:13:22 BST 2006  Olly Betts <olly@survex.com>

	* bin/xapian-progsrv.cc: Fix messages send by xapian-progsrv if an
	  exception is thrown while opening the database.

Fri Sep 15 06:29:55 BST 2006  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: 1/DBL_MAX may be less than DBL_MIN but on
	  platforms like x86 which hold results in registers with extra
	  precision, this is still representable, but not reliably so
	  the test sometimes fails.

Fri Sep 15 02:40:52 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_btreebase.cc: Avoid copying beyond the end of
	  the bitmap block.

Thu Sep 14 02:01:58 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_version.cc: Fix warning from GCC 4.1.0.

Wed Sep 13 18:12:43 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_io.cc,backends/flint/flint_io.h,